# structinator

./: Cargo.toml  README.md  lib.rs
