[package]
name = "structinator"
version = "0.1.2"
edition = "2021"
description = "Library for transfering data from iterators to structs"
license = "Apache-2.0"
authors = ["Benjamin Richcreek <richcreekbenjamin@gmail.com"]
keywords = ["convenience","struct","iterator","conversion","auto-implementation"]
categories = ["development-tools::build-utils","rust-patterns"]
repository = "https://github.com/script-mouse/structinator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
syn = {version = "2.0", features = ["full"]}
quote = "1.0"
structinator_traits = "0.1"